<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_create_business"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/steps"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:counterTextAppearance="@style/counterText"
            app:errorEnabled="true"
            app:counterOverflowTextAppearance="@style/counterOverride"
            app:errorTextAppearance="@style/ErrorText">

            <EditText
                android:id="@id/id_card_business_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_business_name"
                android:ems="40"
                android:lines="1"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:counterTextAppearance="@style/counterText"
            app:errorEnabled="true"
            android:layout_marginTop="10dp"
            app:counterOverflowTextAppearance="@style/counterOverride"
            app:errorTextAppearance="@style/ErrorText">

            <EditText
                android:id="@id/id_card_business_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_business_website"
                android:ems="40"
                android:lines="1"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@id/id_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@id/id_radio_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:checked="true"
                android:textColor="@color/gray_500"
                android:text="@string/hint_business_type_1"/>

            <RadioButton
                android:id="@id/id_radio_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:checked="false"
                android:textColor="@color/gray_500"
                android:text="@string/hint_business_type_2"/>

            <RadioButton
                android:id="@id/id_radio_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_500"
                android:textSize="12sp"
                android:checked="false"
                android:text="@string/hint_business_type_3"/>

        </RadioGroup>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            android:layout_marginTop="10dp"
            app:counterTextAppearance="@style/counterText"
            app:errorEnabled="true"
            app:counterOverflowTextAppearance="@style/counterOverride"
            app:errorTextAppearance="@style/ErrorText">

            <EditText
                android:id="@id/id_card_business_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_business_email"
                android:ems="40"
                android:lines="1"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:layout_marginTop="10dp"
            app:counterTextAppearance="@style/counterText"
            app:errorEnabled="true"
            app:counterOverflowTextAppearance="@style/counterOverride"
            app:errorTextAppearance="@style/ErrorText">

            <EditText
                android:id="@id/id_card_business_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_business_telephone"
                android:ems="40"
                android:lines="1"
                android:inputType="phone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:layout_marginTop="10dp"
            app:counterTextAppearance="@style/counterText"
            app:errorEnabled="true"
            app:counterOverflowTextAppearance="@style/counterOverride"
            app:errorTextAppearance="@style/ErrorText">

            <EditText
                android:id="@id/id_card_business_fax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_business_fax"
                android:ems="40"
                android:lines="1"
                android:inputType="phone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@id/id_next_btn_step_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/next_btn"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
